# CIBMTR-Analysis-AI

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  GO_LIVE.md  RAILWAY.md  RAILWAY_STEP_BY_STEP.md  README.md  render.yaml  ziLtfaco
agents/: README.md  _shared_preamble.md  analyst.md  cohort_assembler.md  cohort_builder.md  comparator.md  diagnoser.md  study_interpreter.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/agents/: registry.py
backend/app/api/: routes.py
backend/app/core/: anthropic_client.py  catalog.py  config.py  contracts.py  datasets.py  models.py  orchestrator.py  r_runner.py  scoring.py  store.py  workspace.py
backend/runs/9e6788be54ab/: .gitignore
backend/tests/: test_datasets.py  test_scoring.py  test_smoke.py
docs/: COMPLIANCE.md  TODO.md
examples/P-5297-synthetic/: README.md  agent-results.yaml  analytic.schema.yaml  make_synthetic_data.py  match-report.md  reproduce_P-5297.R  run_headless.py  synthetic_P-5297.csv  target-results.yaml
frontend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  ziZ6Y2Cm  ziZumy1C
frontend/public/: config.js
infra/: README.md  run_r_sandboxed.sh
r-engine/: DESCRIPTION  NAMESPACE  README.md
schemas/: README.md  agent-results.schema.json  analytic-parquet.contract.md  derivation-check.contract.md  diagnosis.contract.md  match-report.contract.md  reproducibility-class.schema.json  study-spec.schema.json  target-results.schema.json
(+20 files in other folders)
