[project]
name = "cibmtr-repro-backend"
version = "0.1.0"
description = "Orchestrator + agent panel for reproducing published CIBMTR studies from public datasets."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "jsonschema>=4.21",
    "openpyxl>=3.1",
    "striprtf>=0.0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
reproduce = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
